--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 PORT = 8000
 MONGODB_URI = mongodb+srv://vishalmodanwal8572:vishal1234@cluster0.vcrvz.mongodb.net
-ACCESS_TOKEN_SECRET=
-ACCESS_TOKEN_EXPIRY=
-REFRESH_TOKEN_SECRET=
-REFRESH_TOKEN_EXPIRY
+ACCESS_TOKEN_SECRET=Login2
+ACCESS_TOKEN_EXPIRY=2d
+REFRESH_TOKEN_SECRET=login
+REFRESH_TOKEN_EXPIRY=10d
+CORS_ORIGIN=*
